[gd_scene load_steps=11 format=3 uid="uid://bal3arpldg2k5"]

[ext_resource type="Script" uid="uid://dpqq65nvn7owl" path="res://scripts/settings.gd" id="1_5p8wc"]
[ext_resource type="FontFile" uid="uid://blhg73s33pstp" path="res://assets/fonts/OdorMeanChey-Regular.ttf" id="2_r6d6q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxilm"]
bg_color = Color(0.745098, 0.768627, 0.968627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mahjx"]
bg_color = Color(1, 1, 1, 1)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fycn"]
bg_color = Color(0.87451, 0.886275, 0.984314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r6d6q"]
bg_color = Color(0.745098, 0.768627, 0.968627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5p8wc"]
bg_color = Color(0.585548, 0.611124, 0.942939, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36l1p"]
bg_color = Color(0.394394, 0.391968, 0.851109, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vc333"]
bg_color = Color(0.745098, 0.768627, 0.968627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f4mfi"]
bg_color = Color(0.745098, 0.768627, 0.968627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 450.0
script = ExtResource("1_5p8wc")

[node name="InvisibleBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Box" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -175.0
offset_right = 175.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TtilePanel" type="Panel" parent="Box"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yxilm")

[node name="Label" type="Label" parent="Box/TtilePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_fonts/font = ExtResource("2_r6d6q")
theme_override_font_sizes/font_size = 36
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuPanel" type="Panel" parent="Box"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mahjx")

[node name="Menu1" type="Panel" parent="Box/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4fycn")

[node name="Label" type="Label" parent="Box/MenuPanel/Menu1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Sound"
vertical_alignment = 1

[node name="Button" type="Button" parent="Box/MenuPanel/Menu1"]
layout_mode = 0
offset_left = 200.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 50.0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_colors/font_hover_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_colors/font_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_colors/font_focus_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_colors/font_pressed_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxFlat_r6d6q")
theme_override_styles/hover = SubResource("StyleBoxFlat_5p8wc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_36l1p")
theme_override_styles/normal = SubResource("StyleBoxFlat_vc333")
text = "ON"

[node name="Menu2" type="Panel" parent="Box/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4fycn")

[node name="Label" type="Label" parent="Box/MenuPanel/Menu2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Language"
vertical_alignment = 1

[node name="Button" type="Button" parent="Box/MenuPanel/Menu2"]
layout_mode = 0
offset_left = 200.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 50.0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_colors/font_hover_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_colors/font_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_colors/font_focus_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_colors/font_pressed_color = Color(0.0980392, 0.137255, 0.537255, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/hover = SubResource("StyleBoxFlat_5p8wc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_36l1p")
theme_override_styles/normal = SubResource("StyleBoxFlat_f4mfi")
text = "ENG"

[connection signal="gui_input" from="InvisibleBG" to="." method="_on_invisible_bg_gui_input"]
[connection signal="pressed" from="Box/MenuPanel/Menu1/Button" to="." method="_on_button1_pressed"]
